TONI DID MAP MODE LIKE A BOSS

--- a/public/theblank.html
+++ b/public/theblank.html
@@ -233,9 +233,8 @@ http://infiniteblank.com/wordpress/?page_id=20
 		<!-- MAP SCREEN DIV -->
 		
 		<div id="mapDiv" style="display: none; width: 1031px; margin: auto">
-
-			<!-- ### map stuff goes here -->
-
+			<h1 id="mapModeHeader" style="position: absolute; top: 5px"></h1>
+			<div id = "mapCanvasGridDiv" style="position: absolute; width: 1020px; top: 53px"></div>
 		</div>
 		
 		
@@ -311,6 +310,7 @@ http://infiniteblank.com/wordpress/?page_id=20
 				</form>
 			</div>
 		</div>
+		
 
 		<!--PASSWORD SET DIV ADDED BY MARK-->
 		
