--- a/public/theblank.html
+++ b/public/theblank.html
@@ -305,14 +305,15 @@ http://infiniteblank.com/wordpress/?page_id=20
 					<input type="text" id="msgTextInput" value="art.svg"
 						style="display: block; width: 235px; position: absolute; top: 350px; left: 380px">
 					</input>
-
-					<input type="button" id="msgBtnOK" onclick="doMsgBtnOK()" value="Okay"
+					<div id ="buttonDiv">
+						<input type="button" id="msgBtnOK" onclick="doMsgBtnOK()" value="Okay"
 						style="display: block; width: 80px; position: absolute; top: 400px; left: 380px">
-					</input>
+						</input>
 
-					<input type="button" id="msgBtnCancel" onclick="doMsgBtnCancel()" value="Cancel"
+						<input type="button" id="msgBtnCancel" onclick="doMsgBtnCancel()" value="Cancel"
 						style="display: block; width: 80px; position: absolute; top: 400px; left: 540px">
-					</input>
+						</input>
+					</div>
 				</form>
 			</div>
 		</div>
