tryna fix da buttins

--- a/public/theblank.html
+++ b/public/theblank.html
@@ -305,7 +305,7 @@ http://infiniteblank.com/wordpress/?page_id=20
 					<input type="text" id="msgTextInput" value="art.svg"
 						style="display: block; width: 235px; position: absolute; top: 350px; left: 380px">
 					</input>
-					<div id ="buttonDiv">
+					<div id ="buttonDiv" style="width: 1002px; position: absolute; top: 360px;">
 						<input type="button" id="msgBtnOK" onclick="doMsgBtnOK()" value="Okay"
 						style="display: block; width: 80px; position: absolute; top: 400px; left: 380px">
 						</input>
