--- a/public/theblank.html
+++ b/public/theblank.html
@@ -201,7 +201,7 @@ http://infiniteblank.com/wordpress/?page_id=20
 							<input type="button" name="removePlatform" value="Remove Selected Platform"
 								onclick="removeSelectedPlatform(false)"></input>
 								
-							<p>Platforms must be line segments or closed, convex polygons!</p>
+							<p>Platforms must be single line segments or closed, convex polygons!</p>
 						
 						</div>
 					</fieldset>
